other/allowed-label-changes/.kyverno-test/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
- name: allowed-label-changes
  resources:
  - name: badpod01
    values:
      request.operation: UPDATE
  - name: goodpod01
    values:
      request.operation: UPDATE
